# Agentic-AI-Practise-Repo

./: .gitignore
DocumentQA/: DocumentQA.sln  README.md
DocumentQA/database/: init.sql
DocumentQA/src/DocumentQA.Api/: DocumentQA.Api.csproj  DocumentQA.Api.http  Program.cs  appsettings.Example.json  appsettings.json
DocumentQA/src/DocumentQA.Api/Endpoints/: ChatEndpoints.cs  DocumentEndpoints.cs
DocumentQA/src/DocumentQA.Api/Properties/: launchSettings.json
DocumentQA/src/DocumentQA.Application/: Class1.cs  DocumentQA.Application.csproj
DocumentQA/src/DocumentQA.Application/BackgroundJobs/: IngestionWorker.cs
DocumentQA/src/DocumentQA.Application/Configuration/: IngestionSettings.cs  OpenAISettings.cs  RagSettings.cs
DocumentQA/src/DocumentQA.Application/DTOs/: AskRequest.cs  DocumentDto.cs  UploadDocumentRequest.cs
DocumentQA/src/DocumentQA.Domain/: Class1.cs
DocumentQA/src/DocumentQA.Infrastructure/: Class1.cs  DocumentQA.Infrastructure.csproj
DocumentQA/tests/DocumentQA.IntegrationTests/: DocumentQA.IntegrationTests.csproj  UnitTest1.cs
DocumentQA/tests/DocumentQA.UnitTests/: DocumentQA.UnitTests.csproj  UnitTest1.cs
RAG/: DATABASE_SETUP.md  db_connection.py  postgres_rag_manager.py  pyproject.toml  requirments.txt  setup_rag_database.sql
RAG/data/example_source/: sample_document.txt
RAG/data/vector_store/: chroma.sqlite3
RAG/notebook/: document.ipynb
agent-ai/: config.py  main.py  pyproject.toml
agent-ai/agent_declaration/: config_level.py  global_level_agent.py  local_level.py
agent-ai/tools/: tools.py
(+18 files in other folders)
